<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scannig</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="handinput">手动输入</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="selete_date">选择日期</string>

    <!-- 登录  -->
    <string name="login_username">用户名</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_show_password">显示密码</string>
    <string name="login_btn">登录</string>
    
    <!-- 出库确认 -->
    <string name="out_bound_btn">出库</string>
    
    <!-- 设置 -->
    <string name="set_msg_get_info">获取基础数据信息</string>
    <string name="set_msg_check_update">检查更新(当前版本:%s)</string>
    <string name="already_new_version">当前版本已经是最新的了</string>
    <string name="set_msg_account_info">账户信息</string>
    <string name="set_msg_about">关于</string>
    <string name="set_msg_logout">退出登录</string>
    <string name="unknow_filesize">无法获知文件大小</string>
    <string name="cannt_getfile">无法获取文件</string>
    <string name="download">是否下载最新[%s]WMS App？</string>
    <string name="downloading">WMS App下载中</string>
    <string name="update_title">WMS App更新</string>
    <string name="not_found_sku">没找到对应的SKU</string>
    <string name="not_exists_location">当前仓库不存在该货位</string>
    <string name="not_fond_prdinfo">没找到商品信息！</string>
    <string name="network_disable">网络不佳或服务端无响应！</string>
    <string name="resut_parse_failed">解析数据结果失败！</string>
    <string name="wrong_location">非法货位号!</string>
    <string name="not_same_location">源货位和目的货位要为同区的!</string>
    
    <string name="register_name_digits">  
    ._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ  
    </string>
      
    <!-- ZXing -->
    <string name="zxing_scanning">扫一扫</string>
    <string name="zxing_scan_text">对准条码/二维码，即可自动扫描</string>
    <string name="zxing_scan_text_camera">如无法调起摄像头，请检查相关权限设置</string>
    
</resources>
