<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_xiaomai"
    android:orientation="vertical" >

    <include layout="@layout/head_view" />

    <!-- 用户名 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/login_username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_username"
            style="@style/editView_style"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:enabled="true" 
            android:inputType="text" />
    </LinearLayout>

    <!-- 密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/login_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/editView_style"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:password="true"
            android:singleLine="true" 
            android:enabled="true" />
    </LinearLayout>

    <!-- 显示密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/cb_show_password"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:button="@drawable/btn_checked_list"
            android:text="@string/login_show_password"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- 登录 -->

    <Button
        android:id="@+id/btn_login"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/login_btn" >
    </Button>

</LinearLayout>