<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_xiaomai"
    android:orientation="vertical" >

    <!-- title part -->

    <include layout="@layout/head_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/login_input_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/layout_get_info"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/setting_btn_selector" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/set_msg_get_info"
                        android:textColor="@color/color_333"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dip"
                        android:background="@drawable/arrow_right_medium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_split" />

                <LinearLayout
                    android:id="@+id/layout_check_update"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/setting_btn_selector" >

                    <TextView
                        android:id="@+id/check_update_tv"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/set_msg_check_update"
                        android:textColor="@color/color_333"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dip"
                        android:background="@drawable/arrow_right_medium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_split" />

                <LinearLayout
                    android:id="@+id/layout_account_info"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/setting_btn_selector" >

                    <TextView
                        android:id="@+id/account_info_tv"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/set_msg_account_info"
                        android:textColor="@color/color_333"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dip"
                        android:background="@drawable/arrow_right_medium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/setting_btn_selector"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/exit_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/set_msg_logout"
                    android:textColor="@color/color_333"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_scroll"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>